# libprimes

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  configure.bat  configure.sh  primes.c  primes.h
include/: primes.h
src/: primes.c  sieve.c
tests/: CMakeLists.txt  test_get_prime_fact.c  test_is_prime.c  test_sieve.c
